# llm-whisper

./: README.md  helper.py  llm_whisper.py  pyproject.toml
