[project]
name = "llm-whisper"
version = "0.1a0"
description = "Use LLM with Whisper through OpenAI API"
readme = "README.md"
authors = [{name = "Nikola Balic"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "llm",
    "pydub",
    "openai",
]

[project.urls]
Homepage = "https://github.com/nkkko/llm-whisper"
Changelog = "https://github.com/nkkko/llm-whisper/releases"
Issues = "https://github.com/nkkko/llm-whisper/issues"
CI = "https://github.com/nkkko/llm-whisper/actions"

[project.entry-points.llm]
whisper = "llm_whisper"

[project.optional-dependencies]
test = ["pytest"]